Integrate OpenRouter API with gpt-oss-20b:free model

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,11 +1,13 @@
-# OpenAI API Configuration
-OPENAI_API_KEY=your_openai_api_key_here
-OPENAI_MODEL=gpt-3.5-turbo
-OPENAI_MAX_TOKENS=1000
-OPENAI_TEMPERATURE=0.8
-OPENAI_TOP_P=0.9
-OPENAI_TIMEOUT=30.0
-OPENAI_MAX_RETRIES=3
+# OpenRouter API Configuration
+OPENROUTER_API_KEY=your_openrouter_api_key_here
+OPENROUTER_MODEL=openai/gpt-oss-20b:free
+OPENROUTER_MAX_TOKENS=1000
+OPENROUTER_TEMPERATURE=0.8
+OPENROUTER_TOP_P=0.9
+OPENROUTER_TIMEOUT=30.0
+OPENROUTER_MAX_RETRIES=3
+OPENROUTER_SITE_URL=https://nomora-paw.netlify.app
+OPENROUTER_APP_NAME=NomoraPaw
 
 # Application Configuration
 ENVIRONMENT=production
